5/11/17
 - added detector construction template
 - scons path was wrong. fixed in the main SConstruct with Dir directive
 - added generator template
 - added redirecting output to custom session

5/10/17
 - respecting naming convention for source files containin classes definition
 - starting geant4 run manager
 - added template for run and run action
 - added nthread options, 0 will use all available

3/15/17
 - resumed changelong (still need past logs formatting)
 - proper splash messages
 - added GemcGUI instead of general window
 - added images resource

3/13/17
 - added gui code, and moc header compilation for xcode
 - created image dir

3/10/17
 - minor changes

3/21/17
 - compatibility with xcode 8

9/21/16
 - added additional options for splash. added loadResource function for qt qrc resources

7/11/16
 - 3.0 is the gemc re-write using c++11 and mlibrary