@@ -4,10 +4,16 @@
 
 
 // Constructor
-GRun::GRun() {}
+GRun::GRun()
+{
+	G4cout << " Constructor GRun  " << G4endl;
+}
 
 // Destructor
-GRun::~GRun() {}
+GRun::~GRun()
+{
+	G4cout << " Destructor GRun  " << G4endl;
+}
 
 
 //  RecordEvent is called at end of event.
@@ -21,12 +27,16 @@ void GRun::RecordEvent(const G4Event *aEvent)
 	G4HCofThisEvent* pHCE = aEvent->GetHCofThisEvent();
 	if (!pHCE) return;
 
+	G4cout << " RecordEvent run  " << G4endl;
+
 }
 
 
 void GRun::Merge(const G4Run *aRun) {
 
 	const GRun *localRun = static_cast<const GRun *> (aRun);
+
+	G4cout << " Merge run  " << G4endl;
 
 	G4Run::Merge(aRun);
 }
